--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
     </nav>
 
     <header class="bg-primary text-white text-center py-5">
-        <h1>歡迎來到我的 GitHub 個人網頁</h1>
-        <p>這是一個使用 Bootstrap 建立的簡單網頁</p>
+        <h1>B1229044李昊軒的個人網頁</h1>
+        <p>一個使用Bootstrap建立的簡單網頁</p>
     </header>
 
     <div class="container my-5">
         <div class="row">
             <div class="col-md-6">
                 <h2>關於我</h2>
-                <p>這裡可以放上你的個人介紹，例如你的技能、興趣或作品集。</p>
+                <p>就讀長庚大學</p>
             </div>
             <div class="col-md-6">
                 <h2>聯絡方式</h2>
-                <p>Email: example@gmail.com</p>
-                <p>GitHub: <a href="https://github.com/yourusername" target="_blank">你的 GitHub</a></p>
+                <p>Email: herry33242954@gmail.com</p>
+                <p>GitHub ID: <a href="https://github.com/herrylee0526" target="_blank">我的 GitHub</a></p>
             </div>
         </div>
     </div>
 
     <footer class="bg-dark text-white text-center py-3">
-        &copy; 2025 我的個人網頁. All Rights Reserved.
+        &copy; 2025 個人網頁
     </footer>
 
 </body>
