--- a/index.html
+++ b/index.html
@@ -3,39 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的 GitHub 個人網頁</title>
+    <title>B1229044 李昊軒的個人網頁</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .profile-img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 5px solid white;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+        }
+        .card {
+            transition: transform 0.3s;
+        }
+        .card:hover {
+            transform: scale(1.05);
+        }
+    </style>
 </head>
 <body>
 
+    <!-- 導覽列 -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#">我的個人網頁</a>
         </div>
     </nav>
 
+    <!-- 頁面標題 + 個人大頭貼 -->
     <header class="bg-primary text-white text-center py-5">
-        <h1>B1229044李昊軒的個人網頁</h1>
-        <p>一個使用Bootstrap建立的簡單網頁</p>
+        <img src="https://via.placeholder.com/150" alt="個人大頭貼" class="profile-img">
+        <h1 class="mt-3">B1229044 李昊軒</h1>
+        <p>長庚大學學生</p>
     </header>
 
     <div class="container my-5">
         <div class="row">
+            <!-- 關於我 -->
             <div class="col-md-6">
                 <h2>關於我</h2>
-                <p>就讀長庚大學</p>
+                <p>就讀於長庚大學</p>
+                <a href="https://github.com/herrylee0526" class="btn btn-primary mt-3" target="_blank">查看我的 GitHub</a>
             </div>
+
+            <!-- 聯絡方式 -->
             <div class="col-md-6">
                 <h2>聯絡方式</h2>
-                <p>Email: herry33242954@gmail.com</p>
-                <p>GitHub ID: <a href="https://github.com/herrylee0526" target="_blank">我的 GitHub</a></p>
+                <p>Email: <a href="mailto:herry33242954@gmail.com">herry33242954@gmail.com</a></p>
+                <p>GitHub: <a href="https://github.com/herrylee0526" target="_blank">我的 GitHub</a></p>
+            </div>
+        </div>
+
+        <!-- 技能與興趣卡片 -->
+        <div class="row mt-5">
+            <h2 class="text-center mb-4">技能與興趣</h2>
+            <div class="col-md-4">
+                <div class="card text-center p-3 shadow">
+                    <img src="https://via.placeholder.com/100" class="mx-auto mt-3" alt="程式設計">
+                    <h4 class="mt-3">程式設計</h4>
+                    <p>正在學習程式語言</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card text-center p-3 shadow">
+                    <img src="https://via.placeholder.com/100" class="mx-auto mt-3" alt="機器學習">
+                    <h4 class="mt-3">機器學習</h4>
+                    <p>還在摸索中</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card text-center p-3 shadow">
+                    <img src="https://via.placeholder.com/100" class="mx-auto mt-3" alt="遊戲開發">
+                    <h4 class="mt-3">遊戲開發</h4>
+                    <p>未知</p>
+                </div>
             </div>
         </div>
     </div>
 
-    <footer class="bg-dark text-white text-center py-3">
-        &copy; 2025 個人網頁
+    <!-- 頁腳 -->
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+        &copy; 2025 個人網頁 | Design by 李昊軒
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
