--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="col-md-6">
                 <h2>聯絡方式</h2>
                 <p>Email: <a href="mailto:herry33242954@gmail.com">herry33242954@gmail.com</a></p>
-                <p>GitHub: <a href="https://github.com/herrylee0526" target="_blank">我的 GitHub</a></p>
+                <p><a href="https://github.com/herrylee0526" target="_blank">我的 GitHub</a></p>
             </div>
         </div>
 
@@ -60,23 +60,20 @@
             <h2 class="text-center mb-4">技能與興趣</h2>
             <div class="col-md-4">
                 <div class="card text-center p-3 shadow">
-                    <img src="https://via.placeholder.com/100" class="mx-auto mt-3" alt="程式設計">
                     <h4 class="mt-3">程式設計</h4>
-                    <p>正在學習程式語言</p>
+                    <p></p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card text-center p-3 shadow">
-                    <img src="https://via.placeholder.com/100" class="mx-auto mt-3" alt="機器學習">
-                    <h4 class="mt-3">機器學習</h4>
-                    <p>還在摸索中</p>
+                    <h4 class="mt-3">遊戲</h4>
+                    <p></p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card text-center p-3 shadow">
-                    <img src="https://via.placeholder.com/100" class="mx-auto mt-3" alt="遊戲開發">
-                    <h4 class="mt-3">遊戲開發</h4>
-                    <p>未知</p>
+                    <h4 class="mt-3">聽音樂</h4>
+                    <p></p>
                 </div>
             </div>
         </div>
