--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
     <!-- 頁面標題 + 個人大頭貼 -->
     <header class="bg-primary text-white text-center py-5">
-        <img src="https://via.placeholder.com/150" alt="個人大頭貼" class="profile-img">
+       <img src="profile.jpg" alt="個人大頭貼" class="img-fluid rounded-circle" width="150">
+
         <h1 class="mt-3">B1229044 李昊軒</h1>
         <p>長庚大學學生</p>
     </header>
